---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type t_f : function(a, b : int, var c : string) : int\ntype t_fc : function(a, b : cheat int, var c : cheat string) : int\nvar f : t_f\nvar fc : t_fc\n\n% transitive\nf := fc\nfc := f\n"
---
"t_f"@"src/main.t:5..8" [Type]: alias[DefId(PackageId(0), LocalDefId(0))] of function ( pass(value) int, pass(value) int, pass(var ref) string, ) -> int
"a"@"src/main.t:20..21" [Param(Value, No)]: <error>
"b"@"src/main.t:23..24" [Param(Value, No)]: <error>
"c"@"src/main.t:36..37" [Param(Reference(Var), No)]: <error>
"t_fc"@"src/main.t:59..63" [Type]: alias[DefId(PackageId(0), LocalDefId(4))] of function ( pass(value) cheat int, pass(value) cheat int, pass(var ref) cheat string, ) -> int
"a"@"src/main.t:75..76" [Param(Value, No)]: <error>
"b"@"src/main.t:78..79" [Param(Value, No)]: <error>
"c"@"src/main.t:97..98" [Param(Reference(Var), No)]: <error>
"f"@"src/main.t:125..126" [ConstVar(Var, No)]: alias[DefId(PackageId(0), LocalDefId(0))] of function ( pass(value) int, pass(value) int, pass(var ref) string, ) -> int
"fc"@"src/main.t:137..139" [ConstVar(Var, No)]: alias[DefId(PackageId(0), LocalDefId(4))] of function ( pass(value) cheat int, pass(value) cheat int, pass(var ref) cheat string, ) -> int
"<unnamed>"@"<unknown>:0..0" [Undeclared]: <error>
"<unnamed>"@"<unknown>:0..0" [Undeclared]: <error>
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
